WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
195888
REGRESSION(
r243058
): [GStreamer] 3 tests now timing out
https://bugs.webkit.org/show_bug.cgi?id=195888
Summary
REGRESSION(r243058): [GStreamer] 3 tests now timing out
Philippe Normand
Reported
2019-03-18 08:45:11 PDT
.
Attachments
Patch
(5.59 KB, patch)
2019-03-18 08:52 PDT
,
Philippe Normand
calvaris
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2019-03-18 08:46:43 PDT
Regressions: Unexpected timeouts (3) http/tests/media/video-play-stall-seek.html [ Timeout ] http/wpt/fetch/dnt-header-after-redirection.html [ Timeout ] imported/w3c/web-platform-tests/resource-timing/resource_initiator_types.html [ Timeout ]
Philippe Normand
Comment 2
2019-03-18 08:52:44 PDT
Created
attachment 365016
[details]
Patch
Xabier Rodríguez Calvar
Comment 3
2019-03-19 07:17:08 PDT
Comment on
attachment 365016
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=365016&action=review
> Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.h:291 > + mutable uint64_t m_networkReadPosition { 0 };
Do you need this variable to be mutable as well?
Philippe Normand
Comment 4
2019-03-19 07:49:52 PDT
Comment on
attachment 365016
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=365016&action=review
>> Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.h:291 >> + mutable uint64_t m_networkReadPosition { 0 }; > > Do you need this variable to be mutable as well?
It is not. Good catch!
Philippe Normand
Comment 5
2019-03-19 07:53:26 PDT
Committed
r243140
: <
https://trac.webkit.org/changeset/243140
>
Radar WebKit Bug Importer
Comment 6
2019-03-19 07:54:16 PDT
<
rdar://problem/49018785
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug